deploy/src/Microsoft.Azure.IIoT.Deployment/Resources/aks/30_industrial_iot_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: industrial-iot-ingress
  namespace: industrial-iot
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app.kubernetes.io/name: industrial-iot-ingress
    app.kubernetes.io/part-of: industrial-iot
    app.kubernetes.io/version: 2.5.1
    app.kubernetes.io/managed-by: Microsoft.Azure.IIoT.Deployment
spec:
  rules:
  - http:
      paths:
      - path: /registry/(.*)
        backend:
          serviceName: registry-service
          servicePort: 9042
      - path: /twin/(.*)
        backend:
          serviceName: twin-service
          servicePort: 9041
      - path: /history/(.*)
        backend:
          serviceName: history-service
          servicePort: 9043
      - path: /ua/(.*)
        backend:
          serviceName: gateway-service
          servicePort: 9040
      - path: /vault/(.*)
        backend:
          serviceName: vault-service
          servicePort: 9044
